# guildspan-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: discord-setup.md  troubleshooting.md
src/discord_mcp_bridge/: __init__.py  config.py  discord_client.py  errors.py  server.py
src/discord_mcp_bridge/tools/: _common.py  attachments.py  channels.py  diagnostics.py  history.py  messages.py  people.py  reactions.py  search.py  threads.py  uploads.py
src/guildspan/: __init__.py  config.py  discord_client.py  errors.py  i18n.py  server.py
src/guildspan/tools/: _common.py  attachments.py  channels.py  diagnostics.py  history.py  messages.py  people.py  reactions.py  search.py  threads.py  uploads.py
tests/: test_attachments.py  test_channels.py  test_common.py  test_config.py  test_diagnostics.py  test_discord_client.py  test_history.py  test_i18n.py  test_messages.py  test_package_metadata.py  test_people.py  test_reactions.py  test_search.py  test_server.py  test_threads.py  test_uploads.py
