[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guildspan-mcp"
version = "0.1.0"
description = "GuildSpan connects AI agents to Discord through a local FastMCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GuildSpan contributors" }]
keywords = ["mcp", "discord", "discord-bot", "fastmcp", "codex", "claude", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/SouthViking/guildspan-mcp"
Repository = "https://github.com/SouthViking/guildspan-mcp"
Issues = "https://github.com/SouthViking/guildspan-mcp/issues"
Changelog = "https://github.com/SouthViking/guildspan-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
guildspan = "guildspan.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/guildspan"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true
