[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guildspan-mcp"
dynamic = ["version"]
description = "GuildSpan connects AI agents to Discord through a local FastMCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GuildSpan contributors" }]
keywords = ["mcp", "discord", "discord-bot", "fastmcp", "codex", "claude", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/SouthViking/guildspan-mcp"
Repository = "https://github.com/SouthViking/guildspan-mcp"
Issues = "https://github.com/SouthViking/guildspan-mcp/issues"
Changelog = "https://github.com/SouthViking/guildspan-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.5.0",
  "check-wheel-contents>=0.6.3",
  "mypy>=1.10.0",
  "pre-commit>=4.6.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.1.0",
  "ruff==0.15.22",
  "twine>=6.2.0",
]

[project.scripts]
guildspan = "guildspan.server:main"

[tool.hatch.version]
path = "src/guildspan/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/guildspan"]

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["guildspan"]

[tool.coverage.report]
fail_under = 79
precision = 1
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true
